--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<html lang="zh-CN" class="translated-ltr"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1"><title>发起事项</title><script>/**
+<html lang="zh-CN" class="translated-ltr"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"><title>发起事项</title><script>/**
  * 发送页面性能监听请求
  * type: 1:接口响应时间；2：index.html访问到的时间点；3：页面js加载完成，开始调用接口时间点
  */
+
 
 function postTimeLine(type, params){
     //是否已经开始当前客户端调试
