--- a/index_out.html
+++ b/index_out.html
@@ -414,7 +414,7 @@
         <div>
             <div class="m_formList">
                 <div>
-                    <div class="pluginnames" style="height: 43px; width: 345px"><span>入校时间</span> <!----></div> <!---->
+                    <div class="pluginnames" style="height: 43px; width: 345px"><span>出校时间</span> <!----></div> <!---->
                     <div class="plugin-allbox" style="height: 46px; width: 375px">
                         <div data-key="Calendar_37"  class="dplugin-box"
                              style="margin-top: 0px; margin-bottom: 0px; text-align: left;">
@@ -510,7 +510,7 @@
                              style="margin-top: 0px; margin-bottom: 0px; text-align: left;">
                             <div class="dplugin-mobile dplugin-mobile-dinput dinput-vie dplugin-mobile-dinput-focusalert"
                                  style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;">
-                                <span style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;">李睿哲，信息科学与工程学院，崂山南门（学生）入</span>
+                                <span style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;">李睿哲，信息科学与工程学院，崂山南门（学生）出</span>
                             </div>
                         </div> <!----></div>
                 </div>
